testpod.yaml
---
kind: Pod 
apiVersion: v1
metadata:
  name: testpod
spec:
  containers:
    - name: c01
      image: httpd
      ports:
       - containerPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
   name: testpod 
spec:
   replicas: 1
   selector:      # tells the controller which pods to watch/belong to
    matchLabels:
     name: deployment
   template:
     metadata:
       name: testpod1
       labels:
         name: deployment
     spec:
      containers:
        - name: c00
          image: httpd
          ports:
          - containerPort: 80
