nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: mynginx111
  namespace: dungla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx:alpine
        name: mynginx

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: mynginx
  namespace: dungla
spec:
  ports:
  - nodePort: 32224
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
  type: NodePort
